elearningProject/force-app/main/default/objects/Module__c/fields/Num_of_Units__c.field-meta.xml
<CustomField>
    <fullName>Num_of_Units__c</fullName>
    <label>Num of Units</label>
    <summaryForeignKey>Unit__c.Module__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>