elearningProject/force-app/main/default/objects/Module__c/validationRules/RequiredRoleAndSkillToActivate.validationRule-meta.xml
<ValidationRule>
    <fullName>RequiredRoleAndSkillToActivate</fullName>
    <active>true</active>
    <description>The module must have role(s) and skill in order to be activated</description>
    <errorConditionFormula>AND(Active__c ,ISBLANK( Roles__c ) || ISPICKVAL(  Skill__c , &quot;&quot;))</errorConditionFormula>
    <errorMessage>You must have a value in skill and role before activating a module</errorMessage>
</ValidationRule>